# exgac

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
exgac/: __init__.py
