[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "exgac"
description = "Explore github actions for python packages"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Gunnstein T. Frøseth", email = "gunnstein@mailbox.org"},
]
classifiers = [
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/gunnstein/exgac"

[tool.setuptools]
packages = ["exgac"]

[tool.setuptools.dynamic]
version = {attr = "fatpack.__version__"}
